- Fix jump to top of site when opening modal window  - Add focus on Name field when opening modal window

--- a/css/modal-contacts.css
+++ b/css/modal-contacts.css
@@ -1,5 +1,5 @@
 .open-modal {
-    position: fixed;
+    overflow: hidden;
     width: 100%;
 }
 
